--- a/src/datepicker.less
+++ b/src/datepicker.less
@@ -2,14 +2,14 @@
 @header-height: 30px;
 @date-picker-height: 20px;
 
-.ext-datepicker {
+.datepicker {
   //display: inline-block;
   background-color: white;
   position: relative;
   z-index: 99;
 }
 
-.ext-datepicker .form-control {
+.datepicker .form-control {
   background-color: white !important;
   cursor: pointer;
   padding: 0;
@@ -19,41 +19,41 @@
   width: 100%;
 }
 
-.ext-datepicker a {
+.datepicker a {
   display: block;
 }
 
-.ext-datepicker ul {
+.datepicker ul {
   padding: 0;
   margin: 0;
 }
 
-.ext-datepicker .header {
+.datepicker .header {
   text-align: center;
 }
 
-.ext-datepicker .header div {
+.datepicker .header div {
   height: @header-height;
   line-height: @header-height;
 }
 
-.ext-datepicker .header .prev {
+.datepicker .header .prev {
   float: left;
 }
 
-.ext-datepicker .header .current {
+.datepicker .header .current {
   display: inline-block;
 }
 
-.ext-datepicker .header .next {
+.datepicker .header .next {
   float: right;
 }
 
-.ext-datepicker ul {
+.datepicker ul {
   width: 250px;
 }
 
-.ext-datepicker .year li, .ext-datepicker .month li {
+.datepicker .year li, .datepicker .month li {
   width: 25%;
   float: left;
   list-style: none;
@@ -62,7 +62,7 @@
   line-height: @picker-height;
 }
 
-.ext-datepicker .day li {
+.datepicker .day li {
   width: 14.2857%;
   float: left;
   list-style: none;
@@ -71,7 +71,7 @@
   line-height: @date-picker-height;
 }
 
-.ext-datepicker .picker-wrapper {
+.datepicker .picker-wrapper {
   position: absolute;
   background-color: white;
   padding: 5px;
