--- a/src/datepicker.less
+++ b/src/datepicker.less
@@ -3,77 +3,63 @@
 @date-picker-height: 20px;
 
 .datepicker {
-  //display: inline-block;
   background-color: white;
   position: relative;
-  z-index: 99;
-}
+  .form-control {
+    background-color: white !important;
+    cursor: pointer;
+    padding: 0;
+    height: 34px;
+    line-height: 34px;
+    border-radius: 4px;
+    width: 100%;
+  }
+  ul {
+    width: 250px;
+    padding: 0;
+    margin: 0;
+  }
+  a {
+    display: block;
+  }
+  .header {
+    text-align: center;
+    div {
+      height: @header-height;
+      line-height: @header-height;
+    }
+    .prev {
+      float: left;
+    }
+    .current {
+      display: inline-block;
+    }
+    .next {
+      float: right;
+    }
+  }
+  .year li, .month li {
+    width: 25%;
+    float: left;
+    list-style: none;
+    text-align: center;
+    height: @picker-height;
+    line-height: @picker-height;
+  }
+  .day li {
+    width: 14.2857%;
+    float: left;
+    list-style: none;
+    text-align: center;
+    height: @date-picker-height;
+    line-height: @date-picker-height;
+  }
 
-.datepicker .form-control {
-  background-color: white !important;
-  cursor: pointer;
-  padding: 0;
-  height: 34px;
-  line-height: 34px;
-  border-radius: 4px;
-  width: 100%;
-}
-
-.datepicker a {
-  display: block;
-}
-
-.datepicker ul {
-  padding: 0;
-  margin: 0;
-}
-
-.datepicker .header {
-  text-align: center;
-}
-
-.datepicker .header div {
-  height: @header-height;
-  line-height: @header-height;
-}
-
-.datepicker .header .prev {
-  float: left;
-}
-
-.datepicker .header .current {
-  display: inline-block;
-}
-
-.datepicker .header .next {
-  float: right;
-}
-
-.datepicker ul {
-  width: 250px;
-}
-
-.datepicker .year li, .datepicker .month li {
-  width: 25%;
-  float: left;
-  list-style: none;
-  text-align: center;
-  height: @picker-height;
-  line-height: @picker-height;
-}
-
-.datepicker .day li {
-  width: 14.2857%;
-  float: left;
-  list-style: none;
-  text-align: center;
-  height: @date-picker-height;
-  line-height: @date-picker-height;
-}
-
-.datepicker .picker-wrapper {
-  position: absolute;
-  background-color: white;
-  padding: 5px;
-  box-shadow: 0 0 3px rgba(0,0,0,0.5);
+  .picker-wrapper {
+    position: absolute;
+    background-color: white;
+    padding: 5px;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    z-index: 1;
+  }
 }
