--- a/src/datepicker.less
+++ b/src/datepicker.less
@@ -1,99 +1,6 @@
-@picker-height: 40px;
-@header-height: 30px;
-@date-picker-height: 20px;
-
-.datepicker {
-  background-color: white;
-  position: relative;
-  .form-control {
-    background-color: white !important;
+datepicker {
+  input {
+    background: white;
     cursor: pointer;
-    padding: 0;
-    height: 34px;
-    line-height: 34px;
-    border-radius: 4px;
-    width: 100%;
-  }
-  ul {
-    width: 200px;
-    padding: 0;
-    margin: 0;
-  }
-  a {
-    color: #111111;
-    display: block;
-    text-decoration: none;
-  }
-  .header {
-    text-align: center;
-    div {
-      height: @header-height;
-      line-height: @header-height;
-    }
-    .prev, .next {
-      width: 30px;
-      cursor: pointer;
-    }
-    .prev:hover, .next:hover {
-      background-color: #eeeeee;
-    }
-    .prev {
-      float: left;
-    }
-    .current {
-      padding: 0 10px;
-      display: inline-block;
-    }
-    .current:hover {
-      background-color: #eeeeee;
-    }
-    .next {
-      float: right;
-    }
-  }
-  .year li, .month li, .day li {
-    float: left;
-    list-style: none;
-    text-align: center;
-  }
-
-  .year li, .month li {
-    height: @picker-height;
-    line-height: @picker-height;
-  }
-
-  .day li {
-    height: @date-picker-height;
-    line-height: @date-picker-height;
-  }
-
-  .year li.value, .month li.value, .day li.value {
-    background-color: #0058cc;
-    a {
-      color: white;
-    }
-  }
-
-  .day li {
-    width: 14.2857%;
-  }
-  .day li.notcurrent a {
-    color: #999;
-  }
-
-  .year li, .month li {
-    width: 25%;
-  }
-
-  .year li:hover, .month li:hover, .day li:hover {
-    background-color: #eeeeee;
-  }
-
-  .picker-wrapper {
-    position: absolute;
-    background-color: white;
-    padding: 5px;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
-    z-index: 1;
   }
 }
